[gd_scene load_steps=4 format=3 uid="uid://b0epbgaunvj2b"]

[ext_resource type="PackedScene" uid="uid://bhn0jbg4ws3xn" path="res://RouteFinder/Map/Map.tscn" id="1_euobf"]
[ext_resource type="Script" path="res://RouteFinder/Map/MapWindow.gd" id="1_lrpwp"]

[sub_resource type="Environment" id="Environment_yxytf"]

[node name="MapWindow" type="Window"]
title = "Map Viewer"
position = Vector2i(0, 40)
size = Vector2i(1000, 800)
script = ExtResource("1_lrpwp")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1000, 800)
render_target_update_mode = 4

[node name="Map" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_euobf")]

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -300, 1300, 550)
current = true

[node name="CameraHUD" type="Control" parent="SubViewportContainer/SubViewport/Camera3D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Map = Space
Select = LMB
Rotate = RMB + Drag
Pan = Shift + RMB + Drag
Move Up/Down = E/Q"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label_RoomName" type="Label" parent="SubViewportContainer/SubViewport/Camera3D/CameraHUD/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
vertical_alignment = 1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.97406, 0.211619, 0.0801463, -0.143687, 0.304798, 0.941516, 0.174815, -0.928609, 0.327298, 0, 280.259, 0)
directional_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_yxytf")

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
